<resources>
    <string name="app_name">BlueprintTravel</string>
    <string name="title_activity_login">Blueprint</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>

    <string name="action_sign_in">Sign in</string>
    <string name="action_sign_in_short">Sign in</string>

    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <!-- end Strings related to login -->
    <string name="title_activity_map">Map</string>
    <string name="title_activity_log_in">Log In</string>
    <string name="back_to_log_in">Return to Log In Screen</string>
    <string name="register_new_user">Register</string>
    <string name="create_trip">Create Trip</string>
    <string name="places_search_intro_message">Enter Trip Location</string>
    <string name="password_hint">Password-At least 4 characters</string>


    <string name="permission_rationale_location">Access to the location service is required to demonstrate the \'my location\' feature, which shows your current location on the map.</string>
    <string name="location_permission_denied">This sample requires location permission to enable the \'my location\' layer. Please try again and grant access to use the location.\nIf the permission has been permanently denied, it can be enabled from the System Settings &gt; Apps &gt; \'Google Maps API Demos\'.</string>
    <string name="permission_required_toast">Location permission is required for this demo.</string>
    <string name="title_activity_add_attraction"></string>
    <string name="short_30_min_or_less">Short (30 min or less)</string>
    <string name="menu_myTrips">My Trips</string>
    <string name="menu_favorites">Favorites</string>
    <string name="menu_logout">Logout</string>
    <string name="menu_homepage">Homepage</string>
    <color name="white">#FFFFFF</color>
    <string name="title_activity_create_trip">CreateTripActivity</string>
    <string name="next_button">Next</string>
    <string name="trip_name_message">Enter a Trip Name</string>
    <string name="prompt_trip_name">Enter a Trip Name</string>
    <string name="selected_place">Last Selected Place:</string>
    <string name="place_details">
    <![CDATA[
        <b>%1$s</b>
        <br/>
        <i>Place Id: %2$s</i>
        <br/>
        Address: %3$s
        <br/>
        Phone: %4$s
        <br/>
        Website: %5$s
    ]]>
    </string>
    <string name="title_activity_edit_trip"></string>
    <string name="edit_trip">Edit Trip</string>
    <string name="add_attraction">Add Attraction</string>
    <string name="add_restaurant">Add Restaurant</string>
    <string name="attractions">Attractions</string>
    <string name="restaurants">Restaurants</string>
    <string name="generate_route">Generate Route</string>
    <string name="title_activity_add_restaurant"></string>
    <string name="prompt_trip_starting_loc">Enter Your Trip\'s Starting Location</string>
    <string name="title_activity_my_trips">MyTripsActivity</string>
    <string name="my_trips_title">My Trips</string>
    <string name="trip_loc_description">This is the city or neighborhood where your desired trip will take place.</string>
    <string name="cancel">Cancel</string>

    <string name="title_activity_edit_attraction">EditAttractionActivity</string>
    <string name="edit_attraction">Edit Attraction</string>
    <string name="curr_edit_attraction">Editing:</string>

</resources>
